# TjuAgvCar

./: .gitignore  LICENSE  README.md
TrainCNN/: CnnModel.py  SeparableAtrousCnn.py  TensorflowUtil.py  train_cnn.py  train_separable_atrous_cnn.py
darknet_ros/darknet_ros/: CMakeLists.txt
darknet_ros/darknet_ros/src/: YoloROSTracker.cpp
librealsense/: CMakeLists.txt  package.xml
librealsense/librealsense.qtcreator/: realsense.pro
librealsense/src/: uvc-v4l2.cpp
realsense/realsense_camera/: CMakeLists.txt
realsense/realsense_camera/launch/: r200_nodelet_rgbd.launch
realsense/realsense_camera/rviz/: realsenseRvizConfiguration1.rviz
rplidar_ros/launch/: test_rplidar.launch
rplidar_ros/rviz/: rplidar.rviz
ssd_mobilenet/: README.md  config_jetson.yml  package.xml  ssd_mobilenet_node.py
ssd_mobilenet/launch/: ssdmobilenet.launch
tju_car/: CMakeLists.txt  package.xml  serialConnectInfo.md
tju_car/include/tju_car/: serial_com.h  tju_car.h
tju_car/include/usb_cam/: usb_cam.h
tju_car/launch/: car_cnn.launch  hector_slam.launch  ssd.launch  tju_car.launch  tju_car_forCNN.launch  tju_car_forCNN_with_rviz.launch  tju_car_for_object_detection.launch  tju_car_for_recording.launch  tju_car_without_rviz.launch  tju_car_without_usbcam.launch
tju_car/nodes/: CnnModel.py  TensorflowUtil.py  car_cnn_node.py  rplidar_client.cpp  rplidar_node.cpp  ssd_node.py  tju_car_node.cpp  usb_cam_node.cpp
tju_car/nodes/CNN/: CnnModel.py
tju_car/nodes/SSD/dataset/: convert_tfrecords.py
tju_car/nodes/SSD/utility/: ._bbox_util.py  draw_toolbox.py
tju_car/rviz/: hector_slam.rviz  tju_car.rviz  tju_car_forCNN.rviz  tju_car_for_object_detection.rviz  tju_car_without_usbcam.rviz
tju_car/scripts/: delete_all_data_files.sh  play_rosbag.sh  record_rosbag.sh  screen_recorder.sh  usb_cam.rules
tju_car/src/: serial_com.cpp  tju_car.cpp  usb_cam.cpp
usb_cam/launch/: usb_cam.launch
