<?xml version="1.0"?>
<package format="2">
  <name>tju_car</name>
  <version>0.1.0</version>
  <description>The tju_car package</description>
  <maintainer email="tevenfeng@tju.edu.cn">Teven Feng</maintainer>
  <author email="tevenfeng@tju.edu.cn">Teven Feng</author>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>rosconsole</build_depend>
  <exec_depend>rosconsole</exec_depend>

  <build_depend>std_srvs</build_depend>
  <exec_depend>std_srvs</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
