<?xml version="1.0"?>
<package>
  <name>tju_car</name>
  <version>0.1.0</version>
  <description>The tju_car package</description>
  <maintainer email="tevenfeng@tju.edu.cn">Teven Feng</maintainer>
  <author email="tevenfeng@tju.edu.cn">Teven Feng</author>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>rosconsole</build_depend>
  <run_depend>rosconsole</run_depend>

  <build_depend>std_srvs</build_depend>
  <run_depend>std_srvs</run_depend>

  <build_depend>ffmpeg</build_depend>
  <run_depend>ffmpeg</run_depend>

  <build_depend>camera_info_manager</build_depend>
  <run_depend>camera_info_manager</run_depend>

  <build_depend>image_transport</build_depend> 
  <run_depend>image_transport</run_depend> 

  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>rostest</build_depend>
  <run_depend>rostest</run_depend>

  <build_depend>nodelet</build_depend>
  <run_depend>nodelet</run_depend>

  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>

  <build_depend>image_geometry</build_depend>
  <run_depend>image_geometry</run_depend>

  <build_depend version_gte="0.9.2">librealsense</build_depend>
  <run_depend>librealsense</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <run_depend>v4l-utils</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
